# lib-analytics-core

./: CLAUDE.md  Cargo.toml
migrations/: 001_create_analytics_events.sql  002_create_analytics_aggregates.sql
src/: client.rs  error.rs  events.rs  lib.rs
