[package]
name = "lib-analytics-core"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[[bin]]
name = "analytics-migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Database (for migration binary only)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }

# Migrations (for binary only)
lib-migrations-core = { git = "https://github.com/adi-family/lib-migrations-core.git", optional = true }
lib-migrations-sql = { git = "https://github.com/adi-family/lib-migrations-sql.git", optional = true }

# Environment (for binary only)
dotenvy = { version = "0.15", optional = true }

[features]
default = []
migrate = ["lib-migrations-core", "lib-migrations-sql", "dotenvy", "sqlx"]

[dev-dependencies]
tokio-test = "0.4"
